--- a/vendas.html
+++ b/vendas.html
@@ -207,9 +207,7 @@
                               <div class="form-group col-md-2 ">
                                 <label>Sub Total</label>
                                 <input class="au-input au-input--full bg-white 
-                                text-center font-weight-bold border-input " 
-                                type="text"
-                                 name="sub_total" disabled
+                                text-center font-weight-bold border-input " type="text" name="sub_total" disabled
                                   id="Subtotal_vendas" value="0.00">
                               </div>
 
