--- a/login.html
+++ b/login.html
@@ -69,7 +69,7 @@
                                     <label class="">
                                         <input type="checkbox" name="remember" id="form-password">Lembrar-me
                                     </label>
-                                    <label class="">
+                                    <label class="text-dark">
                                         <a href="#">Esqueceu a Senha?</a>
                                     </label>
                                 </div>
