--- a/login.html
+++ b/login.html
@@ -7,7 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Sistema de Gerenciamento">
     <meta name="author" content="KD devs" />
-    <meta name="keywords" content=" kf theme template">
+    <meta name="keywords" content=" kd theme template">
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+    <meta http-equiv="Pragma" content="no-cache" />
+    <meta http-equiv="Expires" content="0" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <link rel="manifest" href="manifest.json" />
     <!-- Title Page-->
