--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
   <meta name="description" content="kdtheme template" />
   <meta name="author" content="KD devs" />
   <meta name="keywords" content="kd theme template" />
-  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+ <!-- <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
   <meta http-equiv="Pragma" content="no-cache" />
   <meta http-equiv="Expires" content="0" />
+ <link rel="manifest" href="manifest.json" />-->
   <link rel="apple-touch-icon" href="./images/icons/icon-57x57.png" />
   <link rel="icon" type="image/x-icon" href="favicon.ico" />
-  <link rel="manifest" href="manifest.json" />
+ 
   <!-- Title Page-->
   <title>Dashboard</title>
 
