--- a/login.html
+++ b/login.html
@@ -8,11 +8,12 @@
     <meta name="description" content="Sistema de Gerenciamento">
     <meta name="author" content="KD devs" />
     <meta name="keywords" content="kd theme template">
-    <meta http-equiv="Cache-Control" content="no-cache" />
-    <!--   <meta http-equiv="Pragma" content="no-cache" />
-    <meta http-equiv="Expires" content="0" />-->
+     <!--  <meta http-equiv="Cache-Control" content="no-cache" />
+    <meta http-equiv="Pragma" content="no-cache" />
+    <meta http-equiv="Expires" content="0" />
+ <link rel="manifest" href="manifest.json" />-->
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
-    <link rel="manifest" href="manifest.json" />
+   
     <!-- Title Page-->
     <title>Login</title>
 
