--- a/login.html
+++ b/login.html
@@ -50,7 +50,7 @@
             <div class="container-fluid  pb-5 container-fluid-burguer">
 
                 <div class="login-wrap ">
-                    <div class="bg-danger" style="border: gray 1px solid;">
+                    <div class="bg-dark" style="border: gray 1px solid;">
                         <h2 class="text-info  text-center pt-2 mb-2">LOGIN</h2>
                         <div class="login-logo bg-black">
                             <a href="#">
