finished categoria delete

--- a/estoque.html
+++ b/estoque.html
@@ -73,10 +73,10 @@
                 <h2 class="bg-info text-white pl-2 pt-2 pb-2 text-center">Estoque</h2>
               </div>
               <!-- STATISTIC-->
-              <section>
+              <section >
 
                 <div class="row mb-4 d-flex justify-content-between mr-3 ml-3 pb-4 pt-4"
-                  style="border-bottom:black solid 3px">
+                  style="border-bottom:black solid 3px; position: fixed;" >
 
                   <div class="col-md-5 d-flex justify-content-between botaomargin font-weight-bold ">
                     <button class="btn btn-success  mesmo-tamanho font-weight-bold" id="produto_modal" type="button">
@@ -141,7 +141,7 @@
                 </h2>
                 <div class="row pr-3 pl-3 mt-4  ">
 
-                  <div class="bg-light table-responsive">
+                  <div class=" bg-light bg-burguer-center table-responsive">
 
                     <table class="table table-hover ">
                       <thead>
@@ -154,10 +154,9 @@
                           <th scope="col">Email</th>
                           <th scope="col">Editar</th>
                           <th scope="col">Excluir</th>
-
                         </tr>
                       </thead>
-                      <tbody id="tabelaFornecedor" class="text-center bg-burguer-center font-weight-bold">
+                      <tbody id="tabelaFornecedor" class="text-center font-weight-bold">
 
 
                       </tbody>
