--- a/estoque.html
+++ b/estoque.html
@@ -137,7 +137,7 @@
                 <!------------------------------------------------->
                 <br>
                 <h2 class="text-center mb-1 mt-3">Fornecedores
-                  <button class="btn btn-primary" type="button">Novo</button>
+           
                 </h2>
                 <div class="row pr-3 pl-3 mt-4  ">
 
@@ -167,11 +167,7 @@
                 <!---------------------------------------------->
                 <div id="cat">
                   <div class="text-center mb-1 mt-3">
-                    <h2>Categorias
-                      <button class="btn btn-info" type="button">
-
-                        Novo</button>
-                    </h2>
+                    <h2>Categorias</h2>
 
                   </div>
                   <div class="row pr-3 pl-3 mt-4 ">
